# Image-Processor

./: .gitignore  EXP.md  README.md  docker-compose.yml  global_utils.py  pyproject.toml  start_worker.py
app/: configs.py  logger.py  main.py
app/exceptions/: custom_http_exceptions.py
app/middlewares/: __init__.py  logger_middleware.py
app/routes/: add_compress_job.py
app/schemas/: compression_schema.py
app/security/: authenticate.py
app/utils/: base_utils.py  common.py  common_utils.py
main_logger/: __init__.py
redis_connection/: __init__.py  add_job.py  configs.py
tasks/: compression.py  configs.py
worker/: worker.py
