[tool.poetry]
name = "image compressor"
version = "0.1.0"
description = "Small practice project which compresses images to store them effectively"
authors = ["Amit Bisht"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
redis = "^5.0.8"
rq = "^1.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
